
[project]
name = "linotak"
version = "0.3.0"
description = "Link Note Taker (a microblog app that emphasizes short notes linking to other sites)."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Damian Cugley", email = "pdc@alleged.org.uk" }]
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "celery (>=5.5.3,<6.0.0)",
    "requests>=2.28.1,<3.0",
    "psycopg2>=2.9.5,<3.0",
    "Markdown>=3.4.1,<4.0",
    "requests-oauthlib>=1.3.1,<2.0",
    "urllib3>=2.2.3,<3.0",
    "uritemplate>=4.1.1,<5.0",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
tblib = "^1.7.0"
factory-boy = "^3.2.1"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"
responses = "^0.25.8"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[tool.isort]
profile = "black"
